[tool.poetry]
name = "wled-e131-2d"
version = "0.1.0"
description = ""
authors = ["Marco Porro <mp.porro.marco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
sacn = "^1.10.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
